--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>My first git</title>
 </head>
 <body>
-    <h1>this is my first git session </h1>
+    <h1>this is my 1st git session </h1>
+    <p>my first commit</p>
 </body>
 </html>
